add less module

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/furkot/icon-fonts",
   "dependencies": {
     "jshint": "^2.6.0",
+    "less": "^2.4.0",
     "webfonts-generator": "^0.2.4"
   }
 }
