--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/furkot/icon-fonts",
   "dependencies": {
+    "find": "^0.1.7",
     "jshint": "^2.6.0",
     "less": "^2.4.0",
     "webfonts-generator": "^0.2.4"
