--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "less": "^2.4.0",
     "lodash": "^3.2.0",
     "minimist": "^1.1.0",
-    "webfonts-generator": "^0.2.4"
+    "webfonts-generator": "^0.2.4",
+    "xmljson": "^0.2.0"
   }
 }
