--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/furkot/icon-fonts",
   "dependencies": {
     "find": "^0.1.7",
+    "handlebars": "^2.0.0",
     "jshint": "^2.6.0",
     "less": "^2.4.0",
     "lodash": "^3.2.0",
