--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/furkot/icon-fonts",
   "dependencies": {
+    "el-component": "^1.0.0",
     "find": "^0.1.7",
     "handlebars": "^2.0.0",
     "jshint": "^2.6.0",
