--- a/.jshintrc
+++ b/.jshintrc
@@ -4,12 +4,6 @@
   "laxbreak": true,
   "laxcomma": true,
   "proto": true,
-  "globals": {
-    "console": false,
-    "exports": false,
-    "process": false,
-    "require": false,
-    "module": false,
-    "__dirname": false
-  }
+  "node": true,
+  "esversion": 8
 }
