--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
   },
   "homepage": "https://github.com/furkot/icon-fonts",
   "dependencies": {
+    "@darthsoup/webfonts-generator": "^0.5.1",
     "@mapbox/spritezero": "^6.1.0",
-    "async": "^1.5.2",
+    "async": "~2",
     "el-component": "^1.0.0",
     "find": "^0.1.7",
-    "handlebars": "^2.0.0",
+    "handlebars": "~4",
     "jshint": "^2.6.0",
-    "less": "^2.4.0",
-    "lodash": "^3.2.0",
+    "less": "~3",
+    "lodash": "~4",
     "minimist": "^1.1.0",
     "svgo": "^1.2.0",
     "svgpath": "^1.0.7",
-    "webfonts-generator": "^0.2.4",
     "xmljson": "^0.2.0"
   }
 }
