--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "svgo": "^1.2.0",
     "svgpath": "^1.0.7",
     "xmljson": "^0.2.0"
+  },
+  "devDependencies": {
+    "marked": "^0.6.2"
   }
 }
