upgrade @mapbox/spritezero to ~8

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "homepage": "https://github.com/furkot/icon-fonts",
   "dependencies": {
     "@darthsoup/webfonts-generator": "^0.5.1",
-    "@mapbox/spritezero": "^6.2.0",
+    "@mapbox/spritezero": "~8",
     "async": "~3",
     "el-component": "^1.0.0",
     "find": "^0.1.7",
