--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lodash": "~4",
     "minimist": "^1.1.0",
     "svgo": "^1.3.2",
-    "svgpath": "^1.0.7",
+    "svgpath": "~2",
     "xmljson": "^0.2.0"
   },
   "devDependencies": {
