add package.files section
limit published size

--- a/package.json
+++ b/package.json
@@ -36,5 +36,11 @@
   },
   "devDependencies": {
     "marked": "~4"
-  }
+  },
+  "files": [
+    "index.js",
+    "lib",
+    "svg",
+    "templates"
+  ]
 }
