--- a/package.json
+++ b/package.json
@@ -2,22 +2,14 @@
   "name": "furkot-icon-fonts",
   "version": "2.3.0",
   "description": "SVG files and scripts to create icon fonts used by furkot trip planner",
-  "main": "index.js",
   "scripts": {
     "test": "make check"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:furkot/icon-fonts.git"
-  },
+  "repository": "furkot/furkot-icon-fonts",
   "keywords": [
     "furkot"
   ],
-  "author": "",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/furkot/icon-fonts/issues"
-  },
   "homepage": "https://github.com/furkot/icon-fonts",
   "dependencies": {
     "@furkot/webfonts-generator": "~1",
@@ -26,7 +18,6 @@
     "el-component": "^1.0.0",
     "find": "^0.1.7",
     "handlebars": "~4",
-    "jshint": "^2.6.0",
     "less": "~4",
     "lodash": "~4",
     "minimist": "^1.1.0",
@@ -35,6 +26,7 @@
     "xmljson": "^0.2.0"
   },
   "devDependencies": {
+    "jshint": "^2.6.0",
     "marked": "~4"
   },
   "files": [
