--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "homepage": "https://github.com/furkot/icon-fonts",
   "dependencies": {
     "@furkot/webfonts-generator": "~1",
-    "@mapbox/spritezero": "~8",
+    "@mapbox/shelf-pack": "^3.2.0",
     "async": "~3",
     "el-component": "^1.0.0",
     "find": "^0.1.7",
     "handlebars": "~4",
     "less": "~4",
     "lodash": "~4",
+    "mapnik": "^4.5.9",
     "svgo": "^1.3.2",
     "svgpath": "~2",
     "xmljson": "^0.2.0"
