--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "handlebars": "~4",
     "less": "~4",
     "lodash": "~4",
-    "mapnik": "^4.5.9",
+    "sharp": "^0.32.0",
     "svgo": "^1.3.2",
     "svgpath": "~2",
     "xmljson": "^0.2.0"
