--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "less": "~4",
     "lodash": "~4",
     "sharp": "^0.32.0",
-    "svgo": "^1.3.2",
+    "svgo": "~3",
     "svgpath": "~2",
     "xmljson": "^0.2.0"
   },
