--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "jshint": "^2.13.6",
+    "@pirxpilot/jshint": "^3.0.1",
     "marked": "~11"
   },
   "files": [
