--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@furkot/webfonts-generator": "~2",
     "@mapwhit/spriteone": "^1.1.0",
-    "el-component": "^1.0.0",
+    "el-component": "~2",
     "handlebars": "~4",
     "less": "~4",
     "lodash": "~4",
